force-app/main/default/objects/Position_Permissions__c/Position_Permissions__c.object-meta.xml
<CustomObject>
    <label>岗位权限</label>
    <nameField>
        <displayFormat>PER-{00000000}</displayFormat>
        <label>岗位权限编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>岗位权限</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>