force-app/main/default/objects/Position_Permissions__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客户</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>岗位权限</relationshipLabel>
    <relationshipName>Account_Channel_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>