force-app/main/default/objects/Position_Permissions__c/fields/Account_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Key__c</fullName>
    <formula>Account__r.Customer_SF_Code__c</formula>
    <label>客户Key</label>
    <type>Text</type>
</CustomField>