force-app/main/default/objects/Position_Permissions__c/fields/Account_Product_Line_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Line_Key__c</fullName>
    <formula>Account_External_Key__c + TEXT(Product_Line__c)</formula>
    <label>客户产品线Key</label>
    <type>Text</type>
</CustomField>