force-app/main/default/objects/Position_Permissions__c/fields/Gridding__c.field-meta.xml
<CustomField>
    <fullName>Gridding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>网格</label>
    <referenceTo>Gridding__c</referenceTo>
    <relationshipLabel>岗位权限</relationshipLabel>
    <relationshipName>Gridding_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>