force-app/main/default/objects/Position_Permissions__c/fields/Gridding_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Gridding_External_Key__c</fullName>
    <formula>Gridding__r.Gridding_Code__c</formula>
    <label>网格Key</label>
    <type>Text</type>
</CustomField>