force-app/main/default/objects/Position_Permissions__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>岗位</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>岗位权限</relationshipLabel>
    <relationshipName>Position_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>