force-app/main/default/objects/Position_Permissions__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>产品线</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>