force-app/main/default/objects/Position_Permissions__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>岗位权限</relationshipLabel>
    <relationshipName>Position_Permissions_Shop</relationshipName>
    <type>Lookup</type>
</CustomField>