force-app/main/default/objects/Position_Permissions__c/fields/Shop_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Shop_External_Key__c</fullName>
    <formula>Shop__r.Shop_Code_Text__c</formula>
    <label>门店Key</label>
    <type>Text</type>
</CustomField>